# 100xNepal-Yagya

./: README.md
ar-detector/: index.html
ar-detector/data/: locations.json
ar-detector/targets/: targets.mind
server/: .gitignore  TESTING_GUIDE.md  app.db  main.py  pyproject.toml  test_travel_api.py
server/ArLocation/: fill_data.py  model.py  router.py  schema.py
server/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
server/core/: config.py  security.py
server/db/: database.py
server/travel/: agent.py  output_parser.py  prompt_template_sample.py  router.py  schemas.py  service.py  tools.py
travelSphere/: index.html  package-lock.json  package.json  tailwind.config.cjs
travelSphere/src/: App.tsx
travelSphere/src/pages/: AddPlace.tsx  ArLocationMap.tsx  home.tsx
