[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.38.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.0",
    "authlib>=1.3.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "requests>=2.31.0",
    "pydantic[email]>=2.12.3",
]
