[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.38.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.0",
    "authlib>=1.3.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "requests>=2.31.0",
    "pydantic[email]>=2.12.3",
    "langchain>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "langchain-community>=0.0.20",
    "langchain-core>=0.1.0",
    "ddgs>=0.1.0",
    "beautifulsoup4>=4.12.0",
]
